--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,6 +69,8 @@
             <h1 class="head" style="color:#b2ca94;">Menu</h1>
             <button class="btn head" style="background-color: #b2ca94;" onclick="paging('/vue/zoom')"> Zoom api test </button>
             <button class="btn head" style="background-color: #b2ca94;"onclick="paging('/vue/list')"> Zoom webhook test </button>
+            <button class="btn head" style="background-color: #4286d4;" onclick="paging('http://localhost:5173/auth/login')"> Zoom admin vue </button>
+            <button class="btn head" style="background-color: #4286d4;" onclick="paging('https://jisu-arisys.github.io/ModernizeCard/')"> ModernizeCard </button>
         </div>
         <div class="div" style="border: 2px solid #085117; opacity: 0.5"></div>
         <div class="loginBox" id="loginBox">
@@ -97,14 +99,10 @@
                 </div>
             </div>
         </div>
-        <div id="pageBox" style="display: none; padding-left: 10px">
-
-        </div>
     </div>
 <script>
     const loginBox = document.getElementById("loginBox");
     const userBox = document.getElementById("userBox");
-    const pageBox = document.getElementById("pageBox");
 
     $(document).ready(function () {
         const user = localStorage.getItem("user");
@@ -136,12 +134,12 @@
             data: JSON.stringify({username, password}),
 
             success: function (response, status, xhr) {
-                if (response.token) {
-                    localStorage.setItem("access_token", response.token);
+                if (response.user && response.token) {
+                    const data = response.user;
+                    data.token = response.token;
                     alert("로그인 성공");
-                }
-                if (response.user) {
-                    localStorage.setItem("user", JSON.stringify(response.user));
+                    localStorage.setItem("user", JSON.stringify(data));
+                    localStorage.setItem("access_token", JSON.stringify(response.token));
                     getUserData(response.user);
                 }
             },
@@ -162,23 +160,8 @@
         $("#name").val(name);
     }
 
-    // 모든 AJAX 요청 전 헤더를 추가하도록 설정
-    $.ajaxSetup({
-        beforeSend: function (xhr) {
-            const token = localStorage.getItem("access_token");
-            xhr.setRequestHeader("Authorization", "Bearer " + token);
-        }
-    });
-
     function paging(url) {
-        if(localStorage.hasOwnProperty("access_token")){
-            document.location.href = url;
-        }else {
-            if(confirm("로그인을 다시 시도해주세요.")){
-                logout();
-                document.location.href = "/";
-            };
-        }
+        document.location.href = url;
     }
 
 </script>
