--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,7 +69,7 @@
             <h1 class="head" style="color:#b2ca94;">Menu</h1>
             <button class="btn head" style="background-color: #b2ca94;" onclick="paging('/vue/zoom')"> Zoom api test </button>
             <button class="btn head" style="background-color: #b2ca94;"onclick="paging('/vue/list')"> Zoom webhook test </button>
-            <button class="btn head" style="background-color: #4286d4;" onclick="paging('http://localhost:5173/auth/login')"> Zoom admin vue </button>
+            <button class="btn head" style="background-color: #4286d4;" onclick="paging('http://localhost:5173/auth/login/check')"> Zoom admin vue </button>
             <button class="btn head" style="background-color: #4286d4;" onclick="paging('https://jisu-arisys.github.io/ModernizeCard/')"> ModernizeCard </button>
         </div>
         <div class="div" style="border: 2px solid #085117; opacity: 0.5"></div>
